Install and configure zookeeper

--- a/prepare.yml
+++ b/prepare.yml
@@ -1,5 +1,5 @@
-# vim: set ft=ansible
-
+# vim: set ft=ansible tabstop=2 shiftwidth=2 expandtab
+---
 - hosts: zuul
   become: true
   become_user: root
@@ -29,3 +29,11 @@
 
     - debug:
         msg: "We're back against. Running on {{ inventory_hostname }}"
+
+    - name: Install dependencies
+      package:
+        name: "{{ item }}"
+        state: present
+      with_items:
+        - git
+        - libselinux-python
